--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,7 +1,8 @@
-@import "bootstrap/scss/functions";
-@import "bootstrap/scss/bootstrap.scss";
+@import 'bootstrap/scss/functions';
+@import 'bootstrap/scss/bootstrap.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Mynerve&family=Noto+Sans+TC:wght@400;500;700&display=swap');
 
-@import "./index";
-
+@import './color';
+@import './font';
+@import './index';
