feat: add vue-router

--- a/src/assets/_index.scss
+++ b/src/assets/_index.scss
@@ -59,6 +59,7 @@ body {
   text-align: center;
   position: relative;
   font-family: 'Courier Prime', monospace;
+  box-shadow: 0em 0em 1em $yellow;
 
   span {
     position: absolute;
