feat: add enter loading and desktop alert

--- a/src/assets/_index.scss
+++ b/src/assets/_index.scss
@@ -22,6 +22,27 @@ a {
   text-decoration: none;
 }
 
+.desktop-show{
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 30;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url(/bg-block.png);
+  background-size: 150px;
+  p{
+    background-color: #FFFCF1;
+    border: 3px solid $brown;
+    border-radius: 5px;
+    padding: 50px;
+  }
+}
+
 .phone {
   height: 100%;
   width: 90%;
